fix: css gap for flex Stack

--- a/src/shared/ui/Stack/Flex/Flex.module.scss
+++ b/src/shared/ui/Stack/Flex/Flex.module.scss
@@ -39,23 +39,23 @@
 }
 
 .gap4 {
-  gap: 4px;
+  gap: 0.2rem;
 }
 
 .gap8 {
-  gap: 8px;
+  gap: 0.5rem;
 }
 
 .gap16 {
-  gap: 16px;
+  gap: 1rem;
 }
 
 .gap24 {
-  gap: 24px;
+  gap: 1.5rem;
 }
 
 .gap32 {
-  gap: 32px;
+  gap: 2rem;
 }
 
 .max {
